<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imgbtn_home"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="88dp"
        android:background="@color/white"
        android:contentDescription="@string/desc_home"
        android:onClick="setHomeActivity"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:layout_marginStart="168dp"
        android:background="#5E5B5B"
        android:contentDescription="@string/desc_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <ImageButton
        android:id="@+id/imgbtn_settings"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/desc_settings"
        android:onClick="setSettingsActivity"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />
</androidx.constraintlayout.widget.ConstraintLayout>