<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificIngredientActivity">

    <include
        android:id="@+id/include8"
        layout="@layout/home_settings_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="301dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/border"
        android:divider="@color/black"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_ingredient"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txt_ingredient"
            android:layout_width="129dp"
            android:layout_height="49dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/txtview_inkop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_bought"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/txt_bought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/txtview_utgang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/txt_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="20dp"
        android:onClick="onSaveClick"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/btn_remove_ingredient"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_remove_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/red"
        android:onClick="onRemoveClick"
        android:text="@string/remove"
        app:layout_constraintBottom_toTopOf="@+id/include6"
        app:layout_constraintEnd_toStartOf="@+id/edit_quantity" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="128dp"
        android:layout_height="53dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/quantity_volume"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <include
        android:id="@+id/include6"
        layout="@layout/lower_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>